fixed spacing

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -26,3 +26,7 @@ footer .text-small {
     }
   }
 }
+
+li > p:first-child {
+  margin: 0;
+}
